--- a/workspace_ABCD/Makefile
+++ b/workspace_ABCD/Makefile
@@ -10,8 +10,8 @@ CXXFLAGS = $(shell root-config --cflags) -Wno-write-strings -D_FILE_OFFSET_BITS=
 DELPHES_LIBS = $(shell root-config --libs) -lEG -L../ -lDelphes
 LIBS    = $(shell root-config --libs) -lTMVA -lMLP -lTreePlayer -lMinuit
 
-BINS = ana_delphes_bg
-OBJS = ana_delphes_bg.o
+BINS = ana_skimming
+OBJS = ana_skimming.o
 
 all: $(BINS)
 
@@ -22,8 +22,8 @@ clean:
 $(BINS): % : %.cc 
 	@echo "Building $@ ... "
 	#$(CXX) $(CCFLAGS) $< $(INCLUDE) $(LIBS) -g -o $@
-	g++ -c ana_delphes_bg.cc $(CXXFLAGS)
-	g++ -o ana_delphes_bg ana_delphes_bg.o $(LDFLAGS) $(DELPHES_LIBS) $(LIBS)
+	g++ -c ana_skimming.cc $(CXXFLAGS)
+	g++ -o ana_skimming ana_skimming.o $(LDFLAGS) $(DELPHES_LIBS) $(LIBS)
 	@echo "Done"
 
 
