--- a/workspace_ABCD/Makefile
+++ b/workspace_ABCD/Makefile
@@ -10,13 +10,13 @@ CXXFLAGS = $(shell root-config --cflags) -Wno-write-strings -D_FILE_OFFSET_BITS=
 DELPHES_LIBS = $(shell root-config --libs) -lEG -L../ -lDelphes
 LIBS    = $(shell root-config --libs) -lTMVA -lMLP -lTreePlayer -lMinuit
 
-BINS = ana_skimming
-OBJS = ana_skimming.o
+BINS = ana_skimming ana_chain 
+OBJS = ana_skimming.o ana_chain.o
 
 all: $(BINS)
 
 clean:
-	rm -f $(BINS) $(OBJS)
+	rm -f $(BINS) $(OBJS) ana_draw_ABCD_C.*
 
 #all:
 $(BINS): % : %.cc 
@@ -24,6 +24,8 @@ $(BINS): % : %.cc
 	#$(CXX) $(CCFLAGS) $< $(INCLUDE) $(LIBS) -g -o $@
 	g++ -c ana_skimming.cc $(CXXFLAGS)
 	g++ -o ana_skimming ana_skimming.o $(LDFLAGS) $(DELPHES_LIBS) $(LIBS)
+	g++ -c ana_chain.cc $(CXXFLAGS)
+	g++ -o ana_chain ana_chain.o $(LDFLAGS) $(DELPHES_LIBS) $(LIBS)
 	@echo "Done"
 
 
